# lean-cai

./: .gitignore  eval_final.jsonl  jsonl_final.jsonl  lol_pls_save.jsonl  pyproject.toml
lean_cai/: axolotl_dpo.yaml  cai.py  data.py  datagen.py  distributed_dpo.py  eval_ds.py  explore.ipynb  hi.py  lean.py  lean_model.py  merge.ipynb  minif2f.py  model.py  posttrain_data.py  prefgen.py  run_dpo.py  train_rm.py
