[tool.poetry]
name = "lean-cai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
lean-dojo = "^1.8.2"
torch = "^2.3.0"
fairscale = "^0.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
