[tool.poetry]
name = "lean-cai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
torch = "^2.3.0"
fairscale = "^0.4.13"
tiktoken = "^0.7.0"
lean-dojo = "^1.8.2"
openai = "^1.30.1"
pydantic = "^2.7.1"
transformers = "^4.41.0"
sentencepiece = "^0.2.0"
lean-client = {git = "https://github.com/leanprover-community/lean-client-python"}
trio = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
